[gd_scene load_steps=6 format=3 uid="uid://4nlth2gkxhh5"]

[ext_resource type="FontFile" uid="uid://cx7qgymunfupm" path="res://assets/fonts/m5x7.ttf" id="1_l4fel"]
[ext_resource type="Script" uid="uid://dvwnej12rixdk" path="res://scripts/damage_number.gd" id="2_vewc8"]

[sub_resource type="Animation" id="Animation_l5iwy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageNumber:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageNumber:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageNumber:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-9, -109)]
}

[sub_resource type="Animation" id="Animation_0ql3d"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageNumber:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageNumber:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.43333334, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageNumber:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-10, -30), Vector2(-10, -70)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5iwy"]
_data = {
&"RESET": SubResource("Animation_l5iwy"),
&"hurt": SubResource("Animation_0ql3d")
}

[node name="DamageNumber" type="Label"]
visible = false
offset_left = -9.0
offset_top = -109.0
offset_right = 13.0
offset_bottom = -61.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_l4fel")
theme_override_font_sizes/font_size = 60
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_vewc8")

[node name="DamageNumberAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_l5iwy")
}
autoplay = "hurt"

[connection signal="animation_finished" from="DamageNumberAnimation" to="." method="_on_damage_number_animation_animation_finished"]
